# TORIS

./: .gitignore  CITATION.cff  LICENSE  MANIFESTO.md  README.md  pyproject.toml
.github/workflows/: main_toris.yml
docs/: ARCHITECTURE.md  BRIDGE_PAPER_OUTLINE.md  COMPLETE_SURPRISE_ARCHITECTURE.md  DEVIATIONS.md  MATH_SPEC.md  RAMANUJAN_BRIDGE.md  index.html  playground.html
experiments/: exp_00_ptp_benchmark.py  exp_01_contradiction_retention.py  exp_02_goal_warp_sensitivity.py  exp_03_sparse_generalization.py  exp_04_surprise_selectivity.py  exp_05_structural_drift.py  exp_06_cross_domain_consolidation.py  exp_06_fast_surprise_dynamics.py  exp_06_wave_propagation.py  exp_07_computational_speedup.py  exp_08_contour_accuracy.py  exp_09_michel_diagnostics.py  exp_10_running_coupling.py  exp_11_suppression_theorem.py  exp_12_ramanujan_goal.py  exp_13_rogers_ramanujan.py  exp_14_rademacher_convergence.py  exp_15_shadow_correction.py  exp_16_dual_weighting.py  exp_guided_tour.py  exp_toris_full_demo.py  visual_demo.py
tests/: test_chain.py  test_complete_surprise.py  test_concept_state.py  test_contradiction.py  test_eisenstein.py  test_exp_01_02.py  test_exp_03_05.py  test_exp_04.py  test_exp_06.py  test_goal.py  test_inference.py  test_maass.py  test_medium_slow.py  test_michel.py  test_plasticity.py  test_predictive.py  test_rademacher.py  test_ramanujan.py  test_relation_types.py  test_relational_field.py  test_relator.py  test_running_coupling.py  test_surprise.py  test_tasf.py
toris/: __init__.py  constants.py  visualizer.py
toris/engine/: __init__.py  tasf.py  (+22 more)
(+20 files in other folders)
